Add hot-serve swagger-ui for local iteration

--- a/spec/package.json
+++ b/spec/package.json
@@ -2,15 +2,21 @@
   "name": "retro-spec",
   "version": "0.1.0",
   "type": "module",
-  "dependencies": {
-    "@typespec/compiler": "latest",
-    "@typespec/http": "latest",
-    "@typespec/rest": "latest",
-    "@typespec/openapi3": "latest"
-  },
   "scripts": {
     "build": "tsp compile .",
-    "watch": "tsp compile . --watch"
+    "watch": "tsp compile . --watch",
+    "serve": "node serve-swagger-ui.js",
+    "generate:go-server": "openapi-generator-cli generate -i ./tsp-output/@typespec/openapi3/openapi.yaml -g go-server -o ../libraries/go-server/ --skip-validate-spec --additional-properties=router=chi,onlyInterfaces=true,outputAsLibrary=true"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@openapitools/openapi-generator-cli": "2.11.0",
+    "@typespec/compiler": "0.54.0",
+    "@typespec/http": "0.54.0",
+    "@typespec/openapi3": "0.54.0",
+    "@typespec/rest": "0.54.0",
+    "express": "4.18.3",
+    "swagger-ui-express": "5.0.0",
+    "yaml": "2.4.1"
+  }
 }
